# susbtrate-node-template

./: chain-spec-plain.json  chain-spec.json
node/: Cargo.toml
node/src/: chain_spec.rs  main.rs  rpc.rs  silly_rpc.rs
pallets/basic-crowdfund/: Cargo.toml
pallets/basic-crowdfund/src/: lib.rs
pallets/configurable-constant/: Cargo.toml
pallets/configurable-constant/src/: lib.rs
pallets/crypto-kitties/: Cargo.toml
pallets/genesis-test/: Cargo.toml
pallets/genesis-test/src/: lib.rs
pallets/lockable-currency/: Cargo.toml
pallets/lockable-currency/src/: lib.rs
pallets/mint-token/: Cargo.toml
pallets/mint-token/src/: lib.rs
pallets/nicks/: Cargo.toml
pallets/nicks/src/: lib.rs  migration.rs
pallets/pallet-accountid/: Cargo.toml
pallets/pallet-accountid/src/: lib.rs  mock.rs  tests.rs
pallets/palletA/: Cargo.toml
pallets/palletA/src/: lib.rs
pallets/palletB/: Cargo.toml
pallets/palletB/src/: lib.rs
pallets/proof-existence/: Cargo.toml
pallets/proof-existence/src/: lib.rs
pallets/random-test/: Cargo.toml
pallets/random-test/src/: lib.rs
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/src/: lib.rs  tests.rs
pallets/template/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
